<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="Iniciar"
    tools:context=".Pregunta2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/P2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R1P2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R2P2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R3P2" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/pregunta2" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Iniciar"
            android:text="@string/SigPregunta" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>