<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Final">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:layout_editor_absoluteY="333dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            app:srcCompat="@mipmap/iti" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ERROR"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sentimos"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sentimos2"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Iniciar"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Iniciar"
            android:text="@string/BotonVolver"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>